syntax = "proto3";

option java_multiple_files = true;
option java_package = "me.nexters.chopstatsapi.grpc";
option java_outer_classname = "UrlProto";

package grpc;

message Url {
  string short_url = 1;
  int64 click_time = 2;
  string platform = 3;
  string referer = 4;
}

message Success {
  string message = 1;
}

service UrlClickService {
  rpc unaryRecordCount (Url) returns (Success);
}
